--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
-    "react-icons": "^3.11.0"
+    "react-icons": "^3.11.0",
+    "sanity-plugin-asset-source-unsplash": "^0.1.3"
   },
   "devDependencies": {}
 }
