--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sanity/default-login": "^2.13.1",
     "@sanity/desk-tool": "^2.13.1",
     "@sanity/google-maps-input": "^2.13.1",
+    "@sanity/production-preview": "^2.13.0",
     "@sanity/vision": "^2.13.1",
     "prop-types": "^15.7",
     "react": "^17.0",
