--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "start": "sanity start",
-    "build": "sanity build"
+    "test": "sanity check",
+    "build": "sanity build public -y"
   },
   "keywords": [
     "sanity"
@@ -30,5 +31,7 @@
     "react-icons": "^3.11.0",
     "sanity-plugin-asset-source-unsplash": "^0.1.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@sanity/cli": "^2.13.1"
+  }
 }
